--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,9 +6,8 @@
             <h2>Card sets</h2>
         </header>
 
-        <div style="display: flex; flex-wrap: wrap;">
+        <div>
             <% sets.forEach((bk)=>{ %>
-                <blockquote style=" flex-grow: 1; flex-basis: 25%; margin: 10px; min-height: 120px;">
                     <div>
                         <%= bk.set_name %><br>
                     </div>
