--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,9 @@
         <header>
             <h1>Pokemon Trading</h1>
             <h2>Card sets</h2>
+            <h3>
+                <a href="/login">Login</a>
+            </h3>
         </header>
 
         <div>
