Login and Signup page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,7 @@
             <h3>
                 <a href="/login">Login</a>
             </h3>
+            <h3>You are now viewing as <%= role %></h3>
         </header>
 
         <div>
