--- a/public/style.css
+++ b/public/style.css
@@ -6,3 +6,9 @@ body {
 h1 {
     color: red;
 }
+
+table, th, td {
+    border: 1px solid white;
+    border-collapse: collapse;
+    text-align: center;
+  }
