--- a/public/style.css
+++ b/public/style.css
@@ -11,4 +11,8 @@ table, th, td {
     border: 1px solid white;
     border-collapse: collapse;
     text-align: center;
-  }
+}
+
+.error {
+    color: red;
+}
