--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,30 +4,33 @@
     <header>
         <h1>Pokemon Trading</h1>
         <h2><%= tdata %></h2>
-     </header>
+    </header>
     
     <main>
-       <div>
-        <% if (source === 'signup') { %>
-            <p><a href="/login">Already have an account? Log in</a></p>
-            <form action="/signup" method="POST">
-                <p>
-                    username : <input name="signup_username"> <br>
-                    email : <input name="signup_email">
-                </p>
-                <input type="submit" value="Sign up">
-            </form>
+        <div>
+            <% if (source === 'signup') { %>
+                <p><a href="/login">Already have an account? Log in</a></p>
+                <form action="/signup" method="POST">
+                    <p>
+                        username : <input name="signup_username"> <br>
+                        email : <input name="signup_email">
+                    </p>
+                    <input type="submit" value="Sign up">
+                </form>
 
-        <% } else { %>
+            <% } else { %>
 
-        <p><a href="/signup">Sign Up</a></p>
-        <form action="/login" method="POST">
-            <p>
-                email : <input name="login_email">
-            </p>
-            <input type="submit" value="Login">
-        </form>
-        <% } %>
-       </div>
-   </main>
-   <%- include('footer') %>
+                <p><a href="/signup">Sign Up</a></p>
+                <form action="/login" method="POST">
+                    <p>
+                        email : <input name="login_email">
+                    </p>
+                    <input type="submit" value="Login">
+                </form>
+                    <p class="error"><%= error %></p>
+
+            <% } %>
+        </div>
+    </main>
+    <%- include('footer') %>
+</body>
