--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,8 +12,9 @@
                 <p><a href="/login">Already have an account? Log in</a></p>
                 <form action="/signup" method="POST">
                     <p>
-                        username : <input name="signup_username"> <br>
-                        email : <input name="signup_email">
+                        Username : <input name="signup_username"> <br>
+                        E-mail : <input name="signup_email"> <br>
+                        Password : <input type="password" name="signup_password">
                     </p>
                     <input type="submit" value="Sign up">
                 </form>
@@ -23,7 +24,8 @@
                 <p><a href="/signup">Sign Up</a></p>
                 <form action="/login" method="POST">
                     <p>
-                        email : <input name="login_email">
+                        E-mail : <input name="login_email">
+                        Password : <input type="password" name="login_password">
                     </p>
                     <input type="submit" value="Login">
                 </form>
