--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,9 +25,9 @@
                         day: 'numeric'
                         }; %>
                         <tr>
-                            <td><a href="/set?set_id=<%= set.set_id %>"><%= set.set_name %></a></td>
-                            <td><%= set.set_num_cards %></td>
-                            <td><%= set.set_date.toLocaleDateString('en-GB', date) %></td>
+                            <td><a href="/set?id=<%= set.id %>"><%= set.name %></a></td>
+                            <td><%= set.num_cards %></td>
+                            <td><%= set.date.toLocaleDateString('en-GB', date) %></td>
                         </tr>
                         <% }) %>
                 </tbody>
