--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,37 +1,38 @@
 <%- include('header') %>
 
-    <h1>Pokemon Trading</h1>
-    <h2>Card sets</h2>
-    <h3>
-        <a href="/login">Login</a>
-    </h3>
-    <h3>You are now viewing as <%= role %>
-    </h3>
+<h2>Card sets</h2>
+<h3><a href="/login">Login</a></h3>
+
+<% if (authen) { %>
+    <a href="/add">Add trading card</a>
+<% } %>
+
+<h3>You are now viewing as <%= role %></h3>
+<div>
     <div>
-        <div>
-            <table>
-                <thead>
-                    <tr>
-                        <th scope="col">Name</th>
-                        <th scope="col">Cards</th>
-                        <th scope="col">Date released</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <% sets.forEach((set)=> {
-                        const date = {
+        <table>
+            <thead>
+                <tr>
+                    <th scope="col">Name</th>
+                    <th scope="col">Cards</th>
+                    <th scope="col">Date released</th>
+                </tr>
+            </thead>
+            <tbody>
+                <% sets.forEach((set)=> {
+                    const date = {
                         year: 'numeric',
                         month: 'long',
                         day: 'numeric'
-                        }; %>
-                        <tr>
-                            <td><a href="/set?id=<%= set.set_id %>"><%= set.set_name %></a></td>
-                            <td><%= set.set_num_cards %></td>
-                            <td><%= set.set_date.toLocaleDateString('en-GB', date) %></td>
-                        </tr>
-                        <% }) %>
-                </tbody>
-            </table>
-        </div>
+                    }; %>
+                    <tr>
+                        <td><a href="/set?id=<%= set.set_id %>"><%= set.set_name %></a></td>
+                        <td><%= set.set_num_cards %></td>
+                        <td><%= set.set_date.toLocaleDateString('en-GB', date) %></td>
+                    </tr>
+                <% }) %>
+            </tbody>
+        </table>
     </div>
+</div>
 <%- include('footer') %>
