--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
     <a href="/add">Add trading card</a>
 <% } %>
 
-<h3>You are now viewing as <%= role %></h3>
+<h3>Welcome <%= name %>!</h3>
 <div>
     <div>
         <table>
