--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,9 +6,10 @@
     <a href="/add">Add trading card</a>
 <% } %>
 
-<h3>Welcome <%= name %>!</h3>
 <div>
+    <h3>Welcome <%= name %>!</h3>
     <div>
+        <h4>Sets</h4>
         <table>
             <thead>
                 <tr>
@@ -28,6 +29,20 @@
                         <td><a href="/set?id=<%= set.set_id %>"><%= set.set_name %></a></td>
                         <td><%= set.set_num_cards %></td>
                         <td><%= set.set_date.toLocaleDateString('en-GB', date) %></td>
+                    </tr>
+                <% }) %>
+            </tbody>
+        </table>
+    </div>
+    <div>
+        <h4>Members</h4>
+        <table>
+            <thead>
+            </thead>
+            <tbody>
+                <% users.forEach((user) => { %>
+                    <tr>
+                        <td><a href="/member?id=<%= user.user_id %>"><%= user.username %></a></td>
                     </tr>
                 <% }) %>
             </tbody>
