--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,8 +37,7 @@
     <div>
         <h4>Members</h4>
         <table>
-            <thead>
-            </thead>
+            <thead></thead>
             <tbody>
                 <% users.forEach((user) => { %>
                     <tr>
@@ -47,6 +46,6 @@
                 <% }) %>
             </tbody>
         </table>
-    </div>
+    </div>    
 </div>
 <%- include('footer') %>
