Added a page counter on both sets and members

--- a/views/details.ejs
+++ b/views/details.ejs
@@ -59,6 +59,19 @@
             <p>No cards found in this user's collection.</p>
         <% } %>
     <% } %>
+    <nav>
+    <% if (totalPages > 1) { %>
+        <div class="pagination">
+            <% for (let i = 1; i <= totalPages; i++) { %>
+                <% if (i === currentPage) { %>
+                    <span class="current-page"><%= i %></span>
+                <% } else { %>
+                    <a href="/member?id=<%= userId %>&page=<%= i %>"><%= i %></a>
+                <% } %>
+            <% } %>
+        </div>
+    <% } %>
+    </nav>
 </div>
 
 <%- include('footer') %>
