--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
     <h3>Welcome <%= name %>!</h3>
     <div>
         <h4>Sets</h4>
-        <table>
+        <table class="center">
             <thead>
                 <tr>
                     <th scope="col">Name</th>
@@ -36,7 +36,7 @@
     </div>
     <div>
         <h4>Members</h4>
-        <table>
+        <table class="center">
             <thead></thead>
             <tbody>
                 <% users.forEach((user) => { %>
