--- a/views/details.ejs
+++ b/views/details.ejs
@@ -3,9 +3,9 @@
 <div>
     <% if (source === 'card') { %>
     <div>
-        <h2><%= cards[0] ? cards[0].set_name : 'Set empty' %></h2>
+        <h2 class="center"><%= cards[0] ? cards[0].set_name : 'Set empty' %></h2>
         <% if (cards && cards.length > 0) { %>
-            <table>
+            <table class="center">
                 <thead>
                     <tr>
                         <th scope="col">Card Name</th>
@@ -18,7 +18,7 @@
                 <tbody>
                     <% cards.forEach((card) => { %>
                         <tr>
-                            <td class="tooltip"><%= card.name %> <span class="tooltiptext"><img src="<%= card.img_low %>" alt="Image of <%= card.name %>"></span></td>
+                            <td class="tooltip"><%= card.name %> <span class="tooltiptext"><img src="<%= card.image %>" alt="Image of <%= card.name %>"></span></td>
                             <td><%= card.hp %></td>
                             <td><%= card.st_name %></td>
                             <td><%= card.attacks %></td>
@@ -28,18 +28,30 @@
                 </tbody>
             </table>
         <% } else { %>
-            <p>No cards found in this set.</p>
+            <p class="center">No cards found in this set.</p>
         <% } %>
+    <% if (totalPages > 1) { %>
+        <nav class="center numButtons">
+            <% for (let i = 1; i <= totalPages; i++) { %>
+                <% if (i === currentPage) { %>
+                    <span class="current-page"><%= i %></span>
+                <% } else { %>
+                    <a href="/member?id=<%= userId %>&page=<%= i %>"><%= i %></a>
+                <% } %>
+            <% } %>
+        </nav>
+    <% } %>
     </div>
     <% } %>
     <% if (source === 'member') { %>
-        <h2><%= member[0] ? member[0].username : 'User' %>'s collection</h2>
+        <h2 class="center"><%= member[0] ? member[0].username : 'User' %>'s collection</h2>
         <% if (member && member.length > 0) { %>
-            <table>
+            <table class="center">
                 <thead>
                     <tr>
                         <th scope="col">Card Name</th>
                         <th scope="col">HP</th>
+                        <th scope="col">Set</th>
                         <th scope="col">Stage</th>
                         <th scope="col">Attacks</th>
                     </tr>
@@ -47,8 +59,9 @@
                 <tbody>
                     <% member.forEach((card) => { %>
                         <tr>
-                            <td><a href="<%= card.img_high %>"><%= card.name %></a></span></td>
+                            <td><a href="<%= card.image %>"><%= card.name %></a></span></td>
                             <td><%= card.hp %></td>
+                            <td><%= card.set_name %></td>
                             <td><%= card.st_name %></td>
                             <td><%= card.attacks %></td>
                         </tr>
@@ -56,11 +69,11 @@
                 </tbody>
             </table>
         <% } else { %>
-            <p>No cards found in this user's collection.</p>
+            <p class="center">No cards found in this user's collection.</p>
         <% } %>
     <% } %>
     <% if (totalPages > 1) { %>
-        <nav>
+        <nav class="center numButtons">
             <% for (let i = 1; i <= totalPages; i++) { %>
                 <% if (i === currentPage) { %>
                     <span class="current-page"><%= i %></span>
