--- a/views/header.ejs
+++ b/views/header.ejs
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
     <link rel="stylesheet" href="/style.css">
     <title>Trade the cart</title>
 </head>
 <body>
+    <header>
+        <h1>Pokemon Trading</h1>
+        <h3><a href="/login">Login</a></h3>
+    </header>
     <div>
-<h1>Pokemon Trading</h1>
-<h3><a href="/login">Login</a></h3>
