Some CSS changes

--- a/views/add.ejs
+++ b/views/add.ejs
@@ -19,9 +19,7 @@
     </select><br>
     <label>Attacks:</label><br>
     <textarea name="card_attack" rows="2" required></textarea><br>
-    <label>Image (low):</label><br>
-    <textarea name="card_img_low" rows="2" required></textarea><br>
-    <label>Image (high):</label><br>
+    <label>Image link:</label><br>
     <textarea name="card_img_high" rows="2" required></textarea><br>
     <button type="submit">Submit</button>
 </form>
