--- a/public/style.css
+++ b/public/style.css
@@ -2,8 +2,13 @@ body {
     grid-template-columns: 1fr min(60rem, 90%) 1fr;
 }
 
+:root {
+    --accent: #fbd743;
+    --accent-text: var(--bg);
+  }
+
 h1 {
-    color: red;
+    color: #ff1f1f;
 }
 
 .center {
@@ -26,8 +31,6 @@ img {
 
 .tooltip {
     position: relative;
-    border-style: dotted;
-    border-bottom: 1px dotted black;
 }
 
 .tooltip .tooltiptext {
@@ -40,12 +43,20 @@ img {
     visibility: visible;
 }
 
+a:active {
+    color: #5db9ff;
+}
+
 table,
 th,
 td {
-    border: 1px solid black;
     text-align: center;
-    border-collapse: collapse;
+    border: 0px solid var(--border);
+}
+
+#special {
+    background-color: yellowgreen;
+    border-color: yellowgreen;
 }
 
 .error {
