--- a/views/header.ejs
+++ b/views/header.ejs
@@ -10,6 +10,6 @@
 <body>
     <header>
         <h1>Pokemon Trading</h1>
-        <h3><a href="/login">Login</a></h3>
+        <h3><a class="button" href="/login">Login</a></h3>
     </header>
     <div>
