--- a/views/header.ejs
+++ b/views/header.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Pokemon Trading</h1>
+        <h1>Pokémon Trading</h1>
         <h3><a class="button" href="/login">Login</a></h3>
     </header>
     <div>
