--- a/views/add.ejs
+++ b/views/add.ejs
@@ -20,7 +20,7 @@
     <label>Attacks:</label><br>
     <textarea name="card_attack" rows="2" required></textarea><br>
     <label>Image link:</label><br>
-    <textarea name="card_img_high" rows="2" required></textarea><br>
+    <textarea name="card_image" rows="3" required></textarea><br>
     <button type="submit">Submit</button>
 </form>
 <%- include('footer') %>
