--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,8 @@
     <h3>Welcome <%= name %>!</h3>
     <% if (authen) { %>
         <h4><a class="button" id="special" href="/add">Add trading card!</a></h4>
+    <% } else { %>
+        <h4><a class="button" href="/login">Login</a></h4>
     <% } %>
     <div>
         <h4 class="center">Sets</h4>
