Ability to add cards to collection

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +8,14 @@
     <link rel="stylesheet" href="/style.css">
     <title>Trade the cart</title>
 </head>
+
 <body>
     <header>
         <h1>Pokémon Trading</h1>
+        <nav>
+            <a href="/html">Sets</a> |
+            <a href="/css">Members</a> |
+            <a href="/member">Collection</a>
+        </nav>
     </header>
     <div>
