--- a/views/add.ejs
+++ b/views/add.ejs
@@ -1,26 +1,49 @@
 <%- include('header') %>
-<h2>Add card</h2>
-<form action="/add" method="POST">
-    <label>Card name:</label><br>
-    <input name="card_name" required><br>
-    <label>Set:</label><br>
-    <select name="card_set">
-        <% sets.forEach(set => { %>
-            <option value="<%= set.set_id %>"><%= set.set_name %></option>
-        <% }); %>
-    </select><br>
-    <label>HP:</label><br>
-    <input name="card_hp" type="number" required><br>
-    <label>Stage:</label><br>
-    <select name="card_stage">
-        <% stages.forEach(stage => { %>
-            <option value="<%= stage.st_id %>"><%= stage.st_name %></option>
-        <% }); %>
-    </select><br>
-    <label>Attacks:</label><br>
-    <textarea name="card_attack" rows="2" required></textarea><br>
-    <label>Image link:</label><br>
-    <textarea name="card_image" rows="3" required></textarea><br>
-    <button type="submit">Submit</button>
-</form>
-<%- include('footer') %>
+    <% if (source === 'addcollection') { %>
+
+        <h2>Add card to your collection</h2>
+        <form action="/addcollection" method="POST">
+        <select name="cards">
+            <% cards.forEach(card => { %>
+                <option value="<%= card.id %>">
+                    <%= card.name %>
+                </option>
+            <% }); %>
+        </select>
+        <button type="submit">Submit</button>
+    </form>
+
+    <% } else if (source === 'addcard') { %>
+
+    <h2>Add card</h2>
+    <h5><a class="button" href="/addcollection">Add card to your collection</a></h5>
+    <form action="/add" method="POST">
+        <label>Card name:</label><br>
+        <input name="card_name" required><br>
+        <label>Set:</label><br>
+        <select name="card_set">
+            <% sets.forEach(set=> { %>
+                <option value="<%= set.set_id %>">
+                    <%= set.set_name %>
+                </option>
+            <% }); %>
+        </select><br>
+        <label>HP:</label><br>
+        <input name="card_hp" type="number" required><br>
+        <label>Stage:</label><br>
+        <select name="card_stage">
+            <% stages.forEach(stage=> { %>
+                <option value="<%= stage.st_id %>">
+                    <%= stage.st_name %>
+                </option>
+                <% }); %>
+        </select><br>
+        <label>Attacks:</label><br>
+        <textarea name="card_attack" rows="2" required></textarea><br>
+        <label>Image link:</label><br>
+        <textarea name="card_image" rows="3" required></textarea><br>
+        <button type="submit">Submit</button>
+    </form>
+
+    <% } %>
+    <%- include('footer') %>
