--- a/views/add.ejs
+++ b/views/add.ejs
@@ -16,7 +16,7 @@
     <% } else if (source === 'addcard') { %>
 
     <h2>Add card</h2>
-    <h5><a class="button" href="/addcollection">Add card to your collection</a></h5>
+    <a class="button" href="/addcollection">Add card to your collection</a>
     <form action="/add" method="POST">
         <label>Card name:</label><br>
         <input name="card_name" required><br>
