--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Silkscreen&display=swap');
+
+:root {
+    --accent: #dab936;
+    --accent-text: var(--bg);
+}
+
 body {
     grid-template-columns: 1fr min(60rem, 90%) 1fr;
     background-image: url('body.png');
@@ -6,11 +13,31 @@ body {
     background-repeat: no-repeat;
 }
 
+h1 {
+    color: #ff1f1f;
+    font-family: 'Silkscreen', sans-serif;
+}
+
 header {
     background-image: url('header.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+    border-radius: var(--standard-border-radius);
+    min-width: 250px;
+    opacity: 1;
+}
+
+table,
+th,
+td {
+    text-align: center;
+    border: 0px solid var(--border);
 }
 
 a:link {
@@ -21,15 +48,6 @@ a:hover {
     color: rgb(128, 19, 0);
 }
 
-:root {
-    --accent: #dab936;
-    --accent-text: var(--bg);
-}
-
-h1 {
-    color: #ff1f1f;
-}
-
 .center {
     margin-left: auto;
     margin-right: auto;
@@ -38,14 +56,6 @@ h1 {
 
 .numButtons {
     margin-top: 12.5px;
-}
-
-img {
-    max-width: 100%;
-    height: auto;
-    border-radius: var(--standard-border-radius);
-    min-width: 250px;
-    opacity: 1;
 }
 
 .tooltip {
@@ -67,18 +77,63 @@ a:active {
     color: #5db9ff;
 }
 
-table,
-th,
-td {
-    text-align: center;
-    border: 0px solid var(--border);
+.error {
+    color: red;
+}
+
+nav {
+    font-size: 1rem;
+    line-height: 2;
+    padding: 0 0 0 0;
+}
+
+nav ol,
+nav ul {
+    align-content: space-around;
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+nav ol li,
+nav ul li {
+    display: inline-block;
+}
+
+nav a,
+nav a:visited {
+    margin: 0 0.5rem 1rem 0.5rem;
+    border: 1px solid var(--border);
+    border-radius: var(--standard-border-radius);
+    color: var(--text);
+    display: inline-block;
+    padding: 0.1rem 1rem;
+    text-decoration: none;
+}
+
+nav a.current,
+nav a:hover,
+nav a[aria-current="page"] {
+    border-color: var(--accent);
+    color: var(--accent);
+    cursor: pointer;
 }
 
 #special {
-    background-color: yellowgreen;
-    border-color: yellowgreen;
+    background-color: rgb(130, 175, 39);
+    border-color: rgb(130, 175, 39);
 }
 
-.error {
-    color: red;
+@media only screen and (max-width: 720px) {
+    nav a {
+        border: none;
+        padding: 0;
+        text-decoration: underline;
+        line-height: 1;
+    }
 }
