--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,9 +3,12 @@
 <div>
     <h3>Welcome <%= name %>!</h3>
     <% if (authen) { %>
-        <h5><a class="button" id="special" href="/add">Add trading card!</a></h5>
+        <nav>
+            <a class="button" id="special" href="/add">Add trading card!</a></h5> |
+            <a href="/member?id=<%= authen %>">Your cards</a>
+        </nav>
     <% } else { %>
-        <h5><a class="button" href="/login">Login</a></h5>
+        <a class="button" href="/login">Login</a>
     <% } %>
     <div>
         <h4 class="center">Sets</h4>
