--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,7 +1,5 @@
 <%- include('header') %>
-    <h2>
-        <h2><%= tdata %></h2>
-    </h2>
+        <h3><%= title %></h3>
         <div>
             <% if (source === 'signup') { %>
                 <p><a href="/login">Already have an account? Log in</a></p>
