--- a/views/details.ejs
+++ b/views/details.ejs
@@ -1,30 +1,15 @@
 <%- include('header') %>
 
-<div>
     <% if (source === 'card') { %>
-    <div>
         <h2 class="center"><%= cards[0] ? cards[0].set_name : 'Set empty' %></h2>
         <% if (cards && cards.length > 0) { %>
-            <table class="center">
-                <thead>
-                    <tr>
-                        <th scope="col">Card Name</th>
-                        <th scope="col">HP</th>
-                        <th scope="col">Stage</th>
-                        <th scope="col">Attacks</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <% cards.forEach((card) => { %>
-                        <tr>
-                            <td class="tooltip"><%= card.name %> <span class="tooltiptext"><img src="<%= card.image %>" alt="Image of <%= card.name %>"></span></td>
-                            <td><%= card.hp %></td>
-                            <td><%= card.st_name %></td>
-                            <td><%= card.attacks %></td>
-                        </tr>
-                    <% }); %>
-                </tbody>
-            </table>
+            <div class="card-grid">
+                <% cards.forEach((card) => { %>
+                    <div class="card-item" style="display: flex;">
+                        <img class="center" src="<%= card.image %>" alt="Image of <%= card.name %>">
+                    </div>
+                <% }); %>
+            </div>            
         <% } else { %>
             <p class="center">No cards found in this set.</p>
         <% } %>
@@ -39,33 +24,18 @@
             <% } %>
         </nav>
     <% } %>
-    </div>
+
     <% } %>
     <% if (source === 'member') { %>
         <h2 class="center"><%= member[0] ? member[0].username : 'User' %>'s collection</h2>
         <% if (member && member.length > 0) { %>
-            <table class="center">
-                <thead>
-                    <tr>
-                        <th scope="col">Card Name</th>
-                        <th scope="col">HP</th>
-                        <th scope="col">Set</th>
-                        <th scope="col">Stage</th>
-                        <th scope="col">Attacks</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <% member.forEach((card) => { %>
-                        <tr>
-                            <td><a href="<%= card.image %>"><%= card.name %></a></span></td>
-                            <td><%= card.hp %></td>
-                            <td><%= card.set_name %></td>
-                            <td><%= card.st_name %></td>
-                            <td><%= card.attacks %></td>
-                        </tr>
-                    <% }); %>
-                </tbody>
-            </table>
+            <div class="card-grid">
+                <% member.forEach((card) => { %>
+                <div class="card-item">
+                    <img class="center" src="<%= card.image %>" alt="Image of <%= card.name %>">
+                </div>
+                <% }); %>
+            </div>
         <% } else { %>
             <p class="center">No cards found in this user's collection.</p>
         <% } %>
@@ -81,6 +51,5 @@
             <% } %>
         </nav>
     <% } %>
-</div>
 
 <%- include('footer') %>
