--- a/views/add.ejs
+++ b/views/add.ejs
@@ -12,6 +12,7 @@
         </select>
         <button type="submit">Submit</button>
     </form>
+    <p class="error"><%= error %></p>
 
     <% } else if (source === 'addcard') { %>
 
