--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,6 +12,7 @@
                     <input type="password" name="signup_password" required><br><br>
                     <input type="submit" value="Sign up">
                 </form>
+                <p class="error"><%= error %></p>
 
             <% } else { %>
 
