--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,7 @@
         <nav>
             <a class="button" id="special" href="/add">Add trading card!</a> |
             <a href="/member?id=<%= authen %>">Your cards</a>
+            <!-- | <a href="/logout">Logout</a> -->
         </nav>
     <% } else { %>
         <nav>
