--- a/views/success.ejs
+++ b/views/success.ejs
@@ -1,4 +1,6 @@
 <%- include('header') %>
-    <h2 class="center"><%= message %></h2>
-    <a class="button center" href="/">Go to homepage</a>
+<div class="center">
+    <h2><%= message %></h2>
+    <a class="button" href="/">Go to homepage</a>
+</div>
 <%- include('footer') %>
