--- a/public/style.css
+++ b/public/style.css
@@ -91,6 +91,11 @@ a:hover {
     display: block;
 }
 
+.card-single img {
+    width: 480px;
+    height: 660px;
+}
+
 .tooltip {
     position: relative;
     text-decoration: dashed;
@@ -181,5 +186,10 @@ nav a[aria-current="page"] {
         height: 90%;
         object-fit:contain;
         display: block;
+    }
+
+    .card-single img {
+        width: 80%;
+        height: 80%;
     }
 }
