--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,6 +1,9 @@
           
             
         </div>
+        <footer>
+            <p>© Arien Bhuiyan 2023</p>
+        </footer>
     </body>
 
     </html>
